# nlp-training

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
inference/architectures/text_classification/: __init__.py  baseline.py
inference/data_processors/: __init__.py  processor.py
inference/data_processors/transformers/: __init__.py  base.py
inference/data_processors/transformers/postprocessing/: __init__.py  get_max.py
inference/data_processors/transformers/preprocessing/: __init__.py  clean_punctuation.py  lower_case.py  nlpiper_integration.py  tokenizer.py  vocab_transform.py
notebook/: Workshop_WDL.ipynb  workshop_wdl_final_solution.ipynb
scripts/: train.py  train_workshop.py
tests/unit/inference/architecture/text_classification/: test_baseline.py
tests/unit/inference/data_processors/: test_base.py
tests/unit/inference/data_processors/preprocessing/: test_nlpiper_integration.py  test_vocab_transform.py
tests/unit/training/data_augmentation/: test_sentence_augmentation.py
tests/unit/training/datasets/text_classification/: test_ag_news.py
tests/unit/training/trainer/: test_text_classification.py
training/: utils.py
training/data_augmentation/: __init__.py  sentence_augmentation.py
training/datasets/text_classification/: __init__.py  ag_news.py
training/trainer/: __init__.py  text_classification.py
