[tool.poetry]
name = "nlp-training"
version = "0.1.0"
description = "NLP training repository."
authors = ["Carlos Alves, Daniel Ferrari and Tomás Osório"]

[tool.poetry.dependencies]
python = "^3.9"

nlpiper = "^0."
sacremoses = "^0"
setuptools = "59.5.0"
torchtext = "^0"
torch = "^1"

mlflow = { version = "^1", optional = true }
nlpaug = { version = "^1", optional = true }
nltk = { version = "^3", optional = true }
pytorch-lightning = { version = "^1", optional = true }
torchmetrics = { version = "^0", optional = true }
tqdm = { version = "^4", optional = true }
jupyter = {version = "^1", optional = true }

[tool.poetry.extras]
training = [
    "mlflow",
    "nlpaug",
    "nltk",
    "pytorch-lightning",
    "torchmetrics",
    "tqdm",
]

exploration = [
    "jupyter",
]

[tool.poetry.dev-dependencies]
pydocstyle = "^6"
pytest = "^7"
pytest-cov = "^3"
mypy = "^0"
flake8 = "^4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
