[tool.poetry]
name = "nlp-training"
version = "0.1.0"
description = "NLP training repository."
authors = ["Carlos Alves, Daniel Ferrari and Tomás Osório"]

[tool.poetry.dependencies]
python = "^3.7.1"
nlpiper = {extras = ["nltk"], version = "^0.3.1"}

pytorch-lightning = { version = "^1.6.1", optional = true }
tqdm = { version = "^4.64.0", optional = true }
nlpaug = { version = "^1.1.10", optional = true }
mlflow = { version = "^1.25.1", optional = true }

[tool.poetry.extras]
training = [
    "pytorch-lightning",
    "tqdm",
    "nlpaug",
    "mlflow"
]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
